tests/baselines/reference/emitArrowFunctionWhenUsingArguments14(alwaysstrict=true,target=es2015).errors.txt
emitArrowFunctionWhenUsingArguments14.ts(3,15): error TS1100: Invalid use of 'arguments' in strict mode.


==== emitArrowFunctionWhenUsingArguments14.ts (1 errors) ====
    function f() {
        if (Math.random()) {
            const arguments = 100;
                  ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
            return () => arguments;
        }
    }